# codewars

./: README.md  codewars.cabal  stack.yaml
app/: Main.hs
scripts/: hoogle.sh  testwatch.sh
src/Kata/: Calculator.hs  Calculator.md  CubeFinder.hs  Doubles.hs  Dubstep.hs  Faberge.hs  Faberge.md  FactorialDecomposition.hs  FindOutlier.hs  Huffman.hs  Huffman.md  Levenshtein.hs  MultNumAsStrings.hs  MultNumAsStrings.md  RailFenceCipher.hs  RailFenceKata.md  Reduction.hs  SimpleSQLEngine.hs  SimpleSQLEngine.md  Sudoku.hs  Sudoku.md  TribonacciSequence.hs
test/Kata/: CalculatorSpec.hs  DoublesSpec.hs  FabergeSpec.hs  FindOutlierSpec.hs  HuffmanSpec.hs  MultNumAsStringsSpec.hs  RailFenceCipherSpec.hs  ReductionSpec.hs  SimpleSQLEngineSpec.hs  SudokuSpec.hs
