name:                codewars
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vilu/codewars#readme
license:             BSD3
license-file:        LICENSE
author:              Viktor Lund
maintainer:          lund.viktor@gmail.com
copyright:           2018 Viktor Lund
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable codewars
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , codewars
  default-language:    Haskell2010

test-suite codewars-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , codewars
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vilu/codewars
